Etiquetas en actividad. Closes #24

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -35,6 +35,7 @@ es:
         Actividad: Acción
         Actividades: Acciones
         actividadpf: Actividad de marco lógico
+        etiqueta: Etiqueta(s)
         nombre: Título
         objetivo: Objetivo de la acción
         orgsocial: Organización social acompañada
