Ortografia y orden js

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -93,7 +93,7 @@ es:
         Nodo: Nodo
         Nodos: Nodos
       "redyalianza": 
-        Redyalinza: Red / Alianza
+        Redyalianza: Red / Alianza
         Redesyalianzas: Redes y Alianzas
       "sip/orgsocial":
         acompanada: Acompañada por IAP
